--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Vite App</title>
+    <title>NotesJs</title>
   </head>
   <body>
     <div id="app">
@@ -55,7 +55,7 @@
                   <option value="Idea">Idea</option>
                 </select></label
               >
-              <button type="submit">confirm</button>
+              <button type="submit" class="px-4 py-2 bg-slate-200 hover:bg-slate-300 duration-150">confirm</button>
             </form>
           </div>
         </div>
