--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </main>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
 
