--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
       </main>
     </div>
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./src/js/form.js"></script>
+    <script type="module" src="./src/js/logicNote.js"></script>
+    <script type="module" src="./src/js/modal.js"></script>
   </body>
 </html>
 
